@@ -129,11 +129,9 @@ TEST_F(EWK2UnitTestBase, ewk_context_additional_plugin_path_set)
 {
     Ewk_Context* context = ewk_view_context_get(webView());
 
-    char* path = 0;
-    ASSERT_FALSE(ewk_context_additional_plugin_path_set(context, path));
+    ASSERT_FALSE(ewk_context_additional_plugin_path_set(context, 0));
 
-    path = "/plugins";
-    ASSERT_TRUE(ewk_context_additional_plugin_path_set(context, path));
+    ASSERT_TRUE(ewk_context_additional_plugin_path_set(context, "/plugins"));
 
     /* FIXME: Get additional plugin path and compare with the path. */
 }
