@@ -1,3 +1,15 @@
+2012-11-09  Jinwoo Song  <jinwoo7.song@samsung.com>
+
+        [EFL][WK2] Fix build warning in test_ewk2_context.cpp: [-Wwrite-strings]
+        https://bugs.webkit.org/show_bug.cgi?id=101666
+
+        Reviewed by Kenneth Rohde Christiansen.
+
+        Use constant character pointer to fix [-Wwrite-strings] warning.
+
+        * UIProcess/API/efl/tests/test_ewk2_context.cpp:
+        (TEST_F):
+
 2012-11-09  Christophe Dumez  <christophe.dumez@intel.com>
 
         [EFL][WK2] Add support for custom cursors
